--- a/contacts/templates/contacts/register.html
+++ b/contacts/templates/contacts/register.html
@@ -1,13 +1,13 @@
 {% extends "contacts/base.html" %}
 {% block body %}
 <div class="container" id="login_box">
-  <form action="/" method="post">
+  <form action="/register/" method="post">
     <div class="form-group center-block">
       {% csrf_token %}
-      {{ login_form }}
-      <input type="submit" class="btn btn-primary center-block" id="login_button" value="Login" />
+      {{ register_form }}
+      <input type="submit" class="btn btn-primary center-block" id="login_button" value="Register" />
     </div>
   </form>
-  <a href="/register/">Register</a>
+  <a href="/">Login</a>
 </div>
 {% endblock %}
