--- a/contacts/templates/contacts/contacts_list.html
+++ b/contacts/templates/contacts/contacts_list.html
@@ -1,23 +1,24 @@
 {% extends "contacts/base.html" %}
 {% block body %}
-<div class="container table-responsive" id="contacts_list">
-  <table class="table table-bordered table-hover table-striped">
-    <thead>
-      <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Phone</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for contact in list_of_contacts %}
-      <tr>
-        <td> {{ contact.firstname }} </td>
-        <td> {{ contact.lastname }} </td>
-        <td> {{ contact.phone }} </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
+  <div class="container table-responsive" id="contacts_list">
+    {% include "contacts/add_contact_modal.html" %}
+    <table class="table table-bordered table-hover table-striped">
+      <thead>
+        <tr>
+          <th>Firstname</th>
+          <th>Lastname</th>
+          <th>Phone</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for contact in list_of_contacts %}
+        <tr>
+          <td> {{ contact.firstname }} </td>
+          <td> {{ contact.lastname }} </td>
+          <td> {{ contact.phone }} </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 {% endblock %}
