--- a/contacts/templates/contacts/add_contact_modal.html
+++ b/contacts/templates/contacts/add_contact_modal.html
@@ -1,22 +1,16 @@
-<button type="button" class="btn btn-primary pull-right" id="add_modal_toggle" data-toggle="modal" data-target="#add_modal">
-  Add contact
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="add_modal" tabindex="-1" role="dialog" aria-labelledby="addModal">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Add new contact</h4>
-      </div>
-      <div class="modal-body">
-        Modal body
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Add</button>
-      </div>
-    </div>
-  </div>
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <h4 class="modal-title">Add new contact</h4>
 </div>
+<form action="/add_contact_modal/" method="post">
+<div class="modal-body">
+    <div class="form-group center-block">
+      {% csrf_token %}
+      {{ new_contact_form }}
+    </div>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+  <input type="submit" class="btn btn-primary" value="Add"></button>
+</div>
+</form>
