--- a/contacts/templates/contacts/base.html
+++ b/contacts/templates/contacts/base.html
@@ -7,6 +7,16 @@
       <link rel="stylesheet" type="text/css" href="{% static 'contacts/default.css' %}" />
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
       <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+      <script>
+          jQuery(document).ready(function($) {
+            $(".clickable-row").click(function() {
+              var target = $(this).data("href");
+              $("#detail_modal_content").load(target);
+            });
+          });
+      </script type="text/javascript">
+
+      </script>
       <meta charset="utf-8">
       <title>Contacts</title>
    </head>
